--- a/assets/sliders.css
+++ b/assets/sliders.css
@@ -42,8 +42,9 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: grey;
+  background: steelblue;
   cursor: pointer;
+  border: none;
 }
 
 /* All the same stuff for IE */
@@ -72,38 +73,30 @@ input[type=range]:focus::-webkit-slider-runnable-track {
 
 input[type=range]::-moz-range-track {
   width: 100%;
-  height: 8.4px;
+  height: 3px;
   cursor: pointer;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
-  background: #3071a9;
-  border-radius: 1.3px;
-  border: 0.2px solid #010101;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  border: none;
 }
 
 input[type=range]::-ms-track {
   width: 100%;
-  height: 8.4px;
+  height: 3px;
   cursor: pointer;
-  background: transparent;
-  border-color: transparent;
-  border-width: 16px 0;
-  color: transparent;
+  background: rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  border: none;
 }
 input[type=range]::-ms-fill-lower {
-  background: #2a6495;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: rgba(0, 0, 0, 0.1);
 }
 input[type=range]:focus::-ms-fill-lower {
-  background: #3071a9;
+  background: rgba(0, 0, 0, 0.1);
 }
 input[type=range]::-ms-fill-upper {
-  background: #3071a9;
-  border: 0.2px solid #010101;
-  border-radius: 2.6px;
-  box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+  background: rgba(0, 0, 0, 0.1);
 }
 input[type=range]:focus::-ms-fill-upper {
-  background: #367ebd;
+  background: rgba(0, 0, 0, 0.1);
 }
